@@ -1,0 +1,5 @@
+const Joi = require('joi');
+
+const versionedObject = Joi.object({
+    version: Joi.number().required(),
+});
